# movies_notifications_service

./: .env.example  .env_local  .env_test  .flake8  .gitignore  Makefile  README.md  docker-compose-base.yml  docker-compose-local.yml  docker-compose-prod.yml  pyproject.toml
.github/requirements/: requirements.txt
.github/workflows/: code-checker.yaml
admin_panel/: .env.example  Dockerfile  __init__.py  app.py  enums.py  models.py  pyproject.toml  resources.py  routes.py  run.sh
admin_panel/api/endpoints/: adminsite.py
admin_panel/common/: exceptions.py
admin_panel/common/models/: admin.py  delivery.py  requests.py
admin_panel/common/services/: communication.py  delivery.py
admin_panel/providers/: login.py
admin_panel/routes/: resources.py  routes.py
admin_panel/settings/: __init__.py  constants.py  logger.py  settings.py
admin_panel/templates/: password.html
admin_panel/templates/providers/login/: password.html
admin_panel/tests/: conftest.py
admin_panel_old/: app.py  containers.py
admin_panel_old/middleware/: request_id.py
docs/as_is/: c1_to_be.puml  с2_to_be.puml
docs/as_is/c4/: c1.puml
docs/as_is/sequence/: extended.puml
docs/to_be/c4/: c1.puml  c2.puml
nginx/conf.d/: site.conf
notification_controller/: .dockerignore  .env.example  .env_local  .env_test  Dockerfile  README.MD  manage.py  pyproject.toml
notification_controller/settings/: __init__.py  base.py  clients.py  consumers.py  daemons.py  db.py  logger.py  sender.py  services.py
notification_controller/src/common/: base_consumer.py  base_daemon.py  exceptions.py
notification_controller/src/common/clients/: amqp_sender.py  auth_api.py  email_provider_api.py  template_api.py
notification_controller/src/common/connectors/: amqp.py  db.py
notification_controller/src/common/repositories/: emails.py  notifications.py  queries.py
notification_controller/src/workers/consumers/email_consumer/: consumer.py  service.py
notification_controller/src/workers/consumers/notifications_enricher_consumer/: consumer.py  service.py
notification_controller/src/workers/consumers/runner/: application.py  bootstrap.py  main.py
notification_controller/src/workers/cron/delivery_trigger_starter/: constants.py  daemon.py  service.py
notification_controller/src/workers/cron/runner/: application.py  bootstrap.py  main.py
notification_controller/src/workers/models/: delivery.py  emails.py  notification.py  recipient.py
notification_controller/tests/: conftest.py
notification_controller/tests/vars/: constants.py  tables.py
notification_controller/tests/workers/: conftest.py
notification_controller/tests/workers/consumers/: test_notifications_enricher_consumer.py
notification_controller/tests/workers/cron/: test_delivery_trigger_starter.py
notifications_api/: .env_local  .env_test  Dockerfile  manage.py  pyproject.toml  run.sh
notifications_api/src/: app.py  containers.py
notifications_api/src/api/models/: base.py  delivery.py  subscription.py
notifications_api/src/api/srv/: __init__.py  routers.py
notifications_api/src/api/srv/endpoints/: deliveries.py  technical.py
notifications_api/src/api/v1/: routers.py
notifications_api/src/api/v1/endpoints/: users.py
notifications_api/src/common/: exception_handlers.py  responses.py
notifications_api/src/common/clients/: amqp_sender.py
notifications_api/src/common/connectors/: amqp.py  db.py
notifications_api/src/common/repositories/: notifications.py  queries.py
notifications_api/src/common/services/: notifications.py  subscription.py
notifications_api/src/settings/: __init__.py  amqp.py  app.py  logger.py  token.py
notifications_api/tests/: conftest.py
notifications_api/tests/src/api/srv/: test_deliveries.py  test_technical.py
notifications_api/tests/src/api/v1/: test_unsubscribed_users.py
notifications_api/tests/vars/: delivery.py  users.py
notifications_db/: Dockerfile  README.md  requirements.txt
notifications_db/migrations/: 20230607_01_X55jW-init-db.py  20230615_01_YGhFF-templates-tables.py  20230617_01_zyHE2-add-column-errors.py  20230617_02_pXSEo-add-table-unsubscribed-users.py  20230617_03_vZNMn-constraint-to-unsubscribed-users.py  20230620_01_3epLx-add-column-tz.py
rabbitmq/: client.py  queues.py  requirements.txt  settings.py
src/: Dockerfile  app.py
templates_service/: .env.example  .env_local  Dockerfile  app.py  containers.py  pyproject.toml  run.sh
templates_service/api/v1/: routers.py
templates_service/api/v1/endpoints/: templates.py
templates_service/common/: exceptions.py
templates_service/common/connectors/: db.py
templates_service/common/models/: inputs.py  responses.py  templates.py
templates_service/common/repositories/: queries.py  templates.py
templates_service/common/services/: templates.py
templates_service/common/validators/: validator.py
templates_service/middleware/: request_id.py
templates_service/other/: templates.sql
templates_service/settings/: __init__.py  constants.py  main.py
templates_service/tests/fake/: request_id.py
templates_service/tests/fixtures/: aiohttp.py  asyncio.py
tests/: conftest.py
tests/fake/: jwt.py
tests/fixtures/: asyncio.py
