[tool.poetry]
name = "notification-controller"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "notification_controller"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.97.0"
asyncpg = "0.27.0"
aio-pika = "9.1.2"
ujson = "5.8.0"
aiomisc = "17.3.2"
orjson = "3.9.1"
aiocron = "1.8"
punq = "0.6.2"
python-dotenv = "1.0.0"
dpath = "2.1.5"
respx = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.2"
pytest-asyncio = "0.21.0"
httpx = "0.24.1"
# linters
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
