[tool.poetry]
name = "notifications-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "notifications_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.96.0"
gunicorn = "20.1.0"
click = "8.1.3"
orjson = "3.9.0"
python-dotenv = "1.0.0"
uvicorn = "0.22.0"
dependency-injector = "4.41.0"
dpath = "2.1.6"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
httpx = "0.24.1"
# linters
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
